--- a/LabBook-menor.org
+++ b/LabBook-menor.org
@@ -778,7 +778,7 @@ scorep with the following parameters.
 scorep --nocompiler --nocuda --noonline-access --nopdt --nouser  --noopencl
 #+END_SRC
 * 2017-01-31 Analisando rastro =cg.B.x-4threads_exp5= registrado localmente
-
+** Introdução
 Gabriel fornece um CSV registrado aqui:
 
 #+begin_src shell :results output
@@ -802,11 +802,12 @@ State, zero, S, 28738.871958, 28748.106292, 9.234334, 6.000000, !$omp implicit b
 Uma vez que não tem o nome das colunas, vou acreditar que os nomes
 localizados no script R do LabBook do Gabriel para ler um arquivo
 similar estão corretos.
-
+** Ler os dados
 Lendo os dados.
 
 #+begin_src R :results output :session :exports both
-df <- read.csv("scripts/execLocal1/cg.B.x-4threads_exp5/traces_parallelregions.csv", header=FALSE, strip.white=TRUE);
+df0 <- read.csv("scripts/execLocal1/cg.B.x-4threads_exp5/traces_parallelregions.csv", header=FALSE, strip.white=TRUE);
+head(df0);
 #+end_src
 
 #+RESULTS:
@@ -833,46 +834,288 @@ df <- read.csv("scripts/execLocal1/cg.B.x-4threads_exp5/traces_parallelregions.c
 5 2028000 2752000
 6 3860000 2792000
 #+end_example
-
+** Tratamento dos dados
 Renomeando as colunas.
 
 #+begin_src R :results output :session :exports both
-df1 <- df %>%
+df1 <- df0 %>%
     rename(
         Type=V1, Container=V2, StateType=V3, Start=V4, End=V5, Duration=V6, Thread=V7, Region=V8,
-        Push_PAPI_TOT_INS=V9,
-        Push_PAPI_REF_CYC=V10,
-	    Push_PAPI_L2_TCM=V11,
-	    Push_PAPI_L2_TCA=V12,
-        Push_ru_utime=V13,
-        Push_ru_stime=V14,
-        Pop_PAPI_TOT_INS=V15,
-        Pop_PAPI_REF_CYC=V16,
-        Pop_PAPI_L2_TCM=V17,
-	    Pop_PAPI_L2_TCA=V18,
-	    Pop_ru_utime=V19,
-        Pop_ru_stime=V20);
+        Push_PAPI_L2_TCA=V9,
+        Push_PAPI_L2_DCM=V10,
+        Push_ru_utime=V11,
+        Push_ru_stime=V12,
+        Pop_PAPI_L2_TCA=V13,
+        Pop_PAPI_L2_DCM=V14,
+        Pop_ru_utime=V15,
+        Pop_ru_stime=V16);
 head(df1);
 #+end_src
 
 #+RESULTS:
-: Error: Unknown variables: V17, V18, V19, V20.
-:      Start       End  Duration      Region MISSES_L2 Thread line
-: 1 110365.8 110365.83  0.004344 omp_master_ 0.4929577      2  546
-: 2 111077.4 111077.52  0.119266     omp_do_ 1.4808168      2  656
-: 3  70646.5  70646.63  0.120836     omp_do_ 1.4634761      2  656
-: 4 100444.3 100444.40  0.120005     omp_do_ 1.4877261      2  656
-: 5 115396.2 115437.58 41.412308     omp_do_ 0.8110392      2  568
-: 6 110365.3 110365.37  0.083634     omp_do_ 8.6798780      2  617
+#+begin_example
+   Type Container StateType        Start          End     Duration Thread
+1 State      zero         S     1.040083     1.053624     0.013541      2
+2 State      zero         S     1.057177     1.063913     0.006736      2
+3 State      zero         S  8345.835045 25213.400111 16867.565066      4
+4 State      zero         S 25227.942463 25235.141154     7.198691      5
+5 State      zero         S 25235.153436 25235.189693     0.036257      5
+6 State      zero         S 28591.264528 28591.299142     0.034614      5
+                    Region Push_PAPI_L2_TCA Push_PAPI_L2_DCM Push_ru_utime
+1 !$omp parallel @cg.f:185            33575             4214         12000
+2 !$omp parallel @cg.f:185            34650             4303         12000
+3  !$omp barrier @cg.f:805        113718173           374753       2016000
+4  !$omp barrier @cg.f:883        113921313           402654       2028000
+5  !$omp barrier @cg.f:896        113922417           402861       2028000
+6  !$omp barrier @cg.f:984        117127138          9304536       3860000
+  Push_ru_stime Pop_PAPI_L2_TCA Pop_PAPI_L2_DCM Pop_ru_utime Pop_ru_stime
+1          4000           34408            4302        12000         4000
+2          4000           35096            4324        12000         4000
+3       2748000       113718763          374938      2020000      2748000
+4       2748000       113921962          402804      2028000      2752000
+5       2752000       113922668          402892      2028000      2752000
+6       2792000       117128106         9304637      3860000      2792000
+#+end_example
 
-Como podemos ver, temos um erro:
+Calculando as reais quantidades para as variáveis:
 
-#+BEGIN_EXAMPLE
-: Error: Unknown variables: V17, V18, V19, V20.
-#+END_EXAMPLE
+#+begin_src R :results output :session :exports both
+df2 <- df1 %>% mutate(
+        PAPI_L2_TCA = Pop_PAPI_L2_TCA - Push_PAPI_L2_TCA,
+        PAPI_L2_DCM = Pop_PAPI_L2_DCM - Push_PAPI_L2_DCM,
+        ru_utime = Pop_ru_utime - Push_ru_utime,
+        ru_stime = Pop_ru_stime - Push_ru_stime);
+head(df2);
+#+end_src
 
-Isso quer dizer que os dados registrados neste arquivo:
-- =scripts/execLocal1/cg.B.x-4threads_exp5/traces_parallelregions.csv=
-são diferentes dos dados registrados no experimento do LabBook do Gabriel:
-- =scripts/execLocal1/cg.B.x-4threads_exp6/traces_parallelregions.csv=
-mas eu não tenho acesso a esse arquivo.
+#+RESULTS:
+#+begin_example
+   Type Container StateType        Start          End     Duration Thread
+1 State      zero         S     1.040083     1.053624     0.013541      2
+2 State      zero         S     1.057177     1.063913     0.006736      2
+3 State      zero         S  8345.835045 25213.400111 16867.565066      4
+4 State      zero         S 25227.942463 25235.141154     7.198691      5
+5 State      zero         S 25235.153436 25235.189693     0.036257      5
+6 State      zero         S 28591.264528 28591.299142     0.034614      5
+                    Region Push_PAPI_L2_TCA Push_PAPI_L2_DCM Push_ru_utime
+1 !$omp parallel @cg.f:185            33575             4214         12000
+2 !$omp parallel @cg.f:185            34650             4303         12000
+3  !$omp barrier @cg.f:805        113718173           374753       2016000
+4  !$omp barrier @cg.f:883        113921313           402654       2028000
+5  !$omp barrier @cg.f:896        113922417           402861       2028000
+6  !$omp barrier @cg.f:984        117127138          9304536       3860000
+  Push_ru_stime Pop_PAPI_L2_TCA Pop_PAPI_L2_DCM Pop_ru_utime Pop_ru_stime
+1          4000           34408            4302        12000         4000
+2          4000           35096            4324        12000         4000
+3       2748000       113718763          374938      2020000      2748000
+4       2748000       113921962          402804      2028000      2752000
+5       2752000       113922668          402892      2028000      2752000
+6       2792000       117128106         9304637      3860000      2792000
+  PAPI_L2_TCA PAPI_L2_DCM ru_utime ru_stime
+1         833          88        0        0
+2         446          21        0        0
+3         590         185     4000        0
+4         649         150        0     4000
+5         251          31        0        0
+6         968         101        0        0
+#+end_example
+
+Eliminar colunas irrelevantes:
+
+#+begin_src R :results output :session :exports both
+df3 <- df2 %>% select(
+                   -Type, -Container, -StateType, -Push_PAPI_L2_TCA, 
+                   -Push_PAPI_L2_DCM, -Push_ru_utime, -Push_ru_stime, -Pop_PAPI_L2_TCA, 
+                   -Pop_PAPI_L2_DCM, -Pop_ru_utime, -Pop_ru_stime);
+head(df3);
+#+end_src
+
+#+RESULTS:
+#+begin_example
+         Start          End     Duration Thread                   Region
+1     1.040083     1.053624     0.013541      2 !$omp parallel @cg.f:185
+2     1.057177     1.063913     0.006736      2 !$omp parallel @cg.f:185
+3  8345.835045 25213.400111 16867.565066      4  !$omp barrier @cg.f:805
+4 25227.942463 25235.141154     7.198691      5  !$omp barrier @cg.f:883
+5 25235.153436 25235.189693     0.036257      5  !$omp barrier @cg.f:896
+6 28591.264528 28591.299142     0.034614      5  !$omp barrier @cg.f:984
+  PAPI_L2_TCA PAPI_L2_DCM ru_utime ru_stime
+1         833          88        0        0
+2         446          21        0        0
+3         590         185     4000        0
+4         649         150        0     4000
+5         251          31        0        0
+6         968         101        0        0
+#+end_example
+
+Transformando para as métricas utilizadas:
+
+#+begin_src R :results output :session :exports both
+df4 <- df3 %>% mutate(MISSES_L2 = PAPI_L2_DCM / PAPI_L2_TCA);
+head(df4);
+#+end_src
+
+#+RESULTS:
+#+begin_example
+         Start          End     Duration Thread                   Region
+1     1.040083     1.053624     0.013541      2 !$omp parallel @cg.f:185
+2     1.057177     1.063913     0.006736      2 !$omp parallel @cg.f:185
+3  8345.835045 25213.400111 16867.565066      4  !$omp barrier @cg.f:805
+4 25227.942463 25235.141154     7.198691      5  !$omp barrier @cg.f:883
+5 25235.153436 25235.189693     0.036257      5  !$omp barrier @cg.f:896
+6 28591.264528 28591.299142     0.034614      5  !$omp barrier @cg.f:984
+  PAPI_L2_TCA PAPI_L2_DCM ru_utime ru_stime MISSES_L2
+1         833          88        0        0 0.1056423
+2         446          21        0        0 0.0470852
+3         590         185     4000        0 0.3135593
+4         649         150        0     4000 0.2311248
+5         251          31        0        0 0.1235060
+6         968         101        0        0 0.1043388
+#+end_example
+
+Remove variáveis não desejadas:
+
+#+begin_src R :results output :session :exports both
+df5 <- df4 %>% select(-PAPI_L2_TCA, -PAPI_L2_DCM, -ru_utime, -ru_stime);
+head(df5);
+#+end_src
+
+#+RESULTS:
+#+begin_example
+         Start          End     Duration Thread                   Region
+1     1.040083     1.053624     0.013541      2 !$omp parallel @cg.f:185
+2     1.057177     1.063913     0.006736      2 !$omp parallel @cg.f:185
+3  8345.835045 25213.400111 16867.565066      4  !$omp barrier @cg.f:805
+4 25227.942463 25235.141154     7.198691      5  !$omp barrier @cg.f:883
+5 25235.153436 25235.189693     0.036257      5  !$omp barrier @cg.f:896
+6 28591.264528 28591.299142     0.034614      5  !$omp barrier @cg.f:984
+  MISSES_L2
+1 0.1056423
+2 0.0470852
+3 0.3135593
+4 0.2311248
+5 0.1235060
+6 0.1043388
+#+end_example
+** Agrupando as regiões de código :ATTACH:
+:PROPERTIES:
+:Attachments: cg.f
+:ID:       cd254451-15d1-443a-9548-ccff07667157
+:END:
+
+#+begin_src R :results output :session :exports both
+df5 %>%
+    select(Region) %>%
+    unique %>%
+    filter(grepl("cg.f", Region)) %>%
+    mutate(Region=gsub("\\!\\$omp ", "", Region)) %>%
+    mutate(Operation = as.factor(gsub(" [^ ]*$", "", Region))) %>%
+    mutate(File = as.factor(gsub(":.*$", "", gsub(".* @", "", Region)))) %>%
+    mutate(Line = as.integer(gsub(".*:", "", Region))) %>%
+    arrange(Line)
+#+end_src
+
+#+RESULTS:
+#+begin_example
+          Operation File Line
+1          parallel cg.f  185
+2           barrier cg.f  196
+3                do cg.f  207
+4                do cg.f  218
+5                do cg.f  223
+6  implicit barrier cg.f  231
+7          parallel cg.f  263
+8                do cg.f  263
+9  implicit barrier cg.f  269
+10         parallel cg.f  277
+11               do cg.f  277
+12 implicit barrier cg.f  281
+13         parallel cg.f  293
+14               do cg.f  293
+15 implicit barrier cg.f  297
+16         parallel cg.f  339
+17               do cg.f  339
+18 implicit barrier cg.f  345
+19         parallel cg.f  361
+20               do cg.f  361
+21 implicit barrier cg.f  365
+22         parallel cg.f  513
+23               do cg.f  519
+24 implicit barrier cg.f  526
+25               do cg.f  533
+26 implicit barrier cg.f  537
+27           master cg.f  546
+28          barrier cg.f  554
+29               do cg.f  568
+30 implicit barrier cg.f  576
+31               do cg.f  617
+32 implicit barrier cg.f  621
+33               do cg.f  633
+34 implicit barrier cg.f  646
+35               do cg.f  656
+36 implicit barrier cg.f  660
+37               do cg.f  671
+38 implicit barrier cg.f  679
+39               do cg.f  685
+40 implicit barrier cg.f  691
+41          barrier cg.f  805
+42          barrier cg.f  883
+43          barrier cg.f  896
+44          barrier cg.f  984
+45          barrier cg.f  994
+46          barrier cg.f 1007
+47               do cg.f 1009
+48 implicit barrier cg.f 1024
+49               do cg.f 1025
+50 implicit barrier cg.f 1029
+#+end_example
+
+Olhando o código podemos ver regiões de código entre:
+- 185 e 231 (entre o primeiro parallel e o primeiro implicit) - chamada a =makea=
+Aqui a função =conj_grad= é chamada pela thread principal.
+- 263 e 269 (entre um parallel e o próximo implicit)
+- 277 e 281
+- 293 e 297
+- 339 e 345
+- 361 e 365
+
+Em seguida, uma grande região paralela (função =conj_grad=) entre linhas
+513 e 691, quebrada em pedaços paralelos (sub-regiões paralelas) da
+seguinte forma:
+- 519 e 526 (do e implicit)
+- 533 e 537
+- 546 e 554 (entre master e barrier - única thread)
+- 568 e 576
+- 617 e 621
+- ... (entre cada do e implicit)
+- 685 e 691
+
+Em seguida, vem a implementação da função =makea=, que contém algumas
+barreiras. Essas barreiras existem pois a dita função é chamada dentro
+de uma região paralela a partir da função =main= do programa, entre as
+linhas 185 e 196 (barreira). Isso pode nos levar a definir uma região
+paralela entre 185 e 196, seguida de outra região entre as linhas
+196+1 e 231.
+
+A barreira interna da função =makea= é a seguinte, chamada antes da
+chamada a =sparse= (lembrando que estamos sempre em uma região paralela
+definida na função main):
+- 805
+
+A função =sparse= contém também barreiras, nas linhas:
+- 883
+- 896
+- 984
+- 1007
+
+Ela se termina por duas regiões paralelas:
+- 1009 a 1024 (do e implicit)
+- 1025 e 1029 (do e implicit)
+
+De uma maneira geral, as relações entre do e implicit barrier são
+claras, elas sempre representam uma região paralela (só podem aparecer
+dentro de uma região marcada =parallel=). Já a presença de =barrier= é
+mais complexa de ser tratada.
+
+
+
