--- a/LabBook-menor.org
+++ b/LabBook-menor.org
@@ -841,7 +841,7 @@ Renomeando as colunas.
 library(dplyr);
 df1 <- df0 %>%
     rename(
-        Type=V1, Container=V2, StateType=V3, Start=V4, End=V5, Duration=V6, Thread=V7, Region=V8,
+        Type=V1, Thread=V2, StateType=V3, Start=V4, End=V5, Duration=V6, Imbrication=V7, Region=V8,
         Push_PAPI_L2_TCA=V9,
         Push_PAPI_L2_DCM=V10,
         Push_ru_utime=V11,
@@ -855,13 +855,13 @@ head(df1);
 
 #+RESULTS:
 #+begin_example
-   Type Container StateType        Start          End     Duration Thread
-1 State      zero         S     1.040083     1.053624     0.013541      2
-2 State      zero         S     1.057177     1.063913     0.006736      2
-3 State      zero         S  8345.835045 25213.400111 16867.565066      4
-4 State      zero         S 25227.942463 25235.141154     7.198691      5
-5 State      zero         S 25235.153436 25235.189693     0.036257      5
-6 State      zero         S 28591.264528 28591.299142     0.034614      5
+   Type Thread StateType        Start          End     Duration Imbrication
+1 State   zero         S     1.040083     1.053624     0.013541           2
+2 State   zero         S     1.057177     1.063913     0.006736           2
+3 State   zero         S  8345.835045 25213.400111 16867.565066           4
+4 State   zero         S 25227.942463 25235.141154     7.198691           5
+5 State   zero         S 25235.153436 25235.189693     0.036257           5
+6 State   zero         S 28591.264528 28591.299142     0.034614           5
                     Region Push_PAPI_L2_TCA Push_PAPI_L2_DCM Push_ru_utime
 1 !$omp parallel @cg.f:185            33575             4214         12000
 2 !$omp parallel @cg.f:185            34650             4303         12000
@@ -891,13 +891,13 @@ head(df2);
 
 #+RESULTS:
 #+begin_example
-   Type Container StateType        Start          End     Duration Thread
-1 State      zero         S     1.040083     1.053624     0.013541      2
-2 State      zero         S     1.057177     1.063913     0.006736      2
-3 State      zero         S  8345.835045 25213.400111 16867.565066      4
-4 State      zero         S 25227.942463 25235.141154     7.198691      5
-5 State      zero         S 25235.153436 25235.189693     0.036257      5
-6 State      zero         S 28591.264528 28591.299142     0.034614      5
+   Type Thread StateType        Start          End     Duration Imbrication
+1 State   zero         S     1.040083     1.053624     0.013541           2
+2 State   zero         S     1.057177     1.063913     0.006736           2
+3 State   zero         S  8345.835045 25213.400111 16867.565066           4
+4 State   zero         S 25227.942463 25235.141154     7.198691           5
+5 State   zero         S 25235.153436 25235.189693     0.036257           5
+6 State   zero         S 28591.264528 28591.299142     0.034614           5
                     Region Push_PAPI_L2_TCA Push_PAPI_L2_DCM Push_ru_utime
 1 !$omp parallel @cg.f:185            33575             4214         12000
 2 !$omp parallel @cg.f:185            34650             4303         12000
@@ -925,7 +925,7 @@ Eliminar colunas irrelevantes:
 
 #+begin_src R :results output :session :exports both
 df3 <- df2 %>% select(
-                   -Type, -Container, -StateType, -Push_PAPI_L2_TCA, 
+                   -Type, -Imbrication, -StateType, -Push_PAPI_L2_TCA, 
                    -Push_PAPI_L2_DCM, -Push_ru_utime, -Push_ru_stime, -Pop_PAPI_L2_TCA, 
                    -Pop_PAPI_L2_DCM, -Pop_ru_utime, -Pop_ru_stime);
 head(df3);
@@ -933,13 +933,13 @@ head(df3);
 
 #+RESULTS:
 #+begin_example
-         Start          End     Duration Thread                   Region
-1     1.040083     1.053624     0.013541      2 !$omp parallel @cg.f:185
-2     1.057177     1.063913     0.006736      2 !$omp parallel @cg.f:185
-3  8345.835045 25213.400111 16867.565066      4  !$omp barrier @cg.f:805
-4 25227.942463 25235.141154     7.198691      5  !$omp barrier @cg.f:883
-5 25235.153436 25235.189693     0.036257      5  !$omp barrier @cg.f:896
-6 28591.264528 28591.299142     0.034614      5  !$omp barrier @cg.f:984
+  Thread        Start          End     Duration                   Region
+1   zero     1.040083     1.053624     0.013541 !$omp parallel @cg.f:185
+2   zero     1.057177     1.063913     0.006736 !$omp parallel @cg.f:185
+3   zero  8345.835045 25213.400111 16867.565066  !$omp barrier @cg.f:805
+4   zero 25227.942463 25235.141154     7.198691  !$omp barrier @cg.f:883
+5   zero 25235.153436 25235.189693     0.036257  !$omp barrier @cg.f:896
+6   zero 28591.264528 28591.299142     0.034614  !$omp barrier @cg.f:984
   PAPI_L2_TCA PAPI_L2_DCM ru_utime ru_stime
 1         833          88        0        0
 2         446          21        0        0
@@ -958,13 +958,13 @@ head(df4);
 
 #+RESULTS:
 #+begin_example
-         Start          End     Duration Thread                   Region
-1     1.040083     1.053624     0.013541      2 !$omp parallel @cg.f:185
-2     1.057177     1.063913     0.006736      2 !$omp parallel @cg.f:185
-3  8345.835045 25213.400111 16867.565066      4  !$omp barrier @cg.f:805
-4 25227.942463 25235.141154     7.198691      5  !$omp barrier @cg.f:883
-5 25235.153436 25235.189693     0.036257      5  !$omp barrier @cg.f:896
-6 28591.264528 28591.299142     0.034614      5  !$omp barrier @cg.f:984
+  Thread        Start          End     Duration                   Region
+1   zero     1.040083     1.053624     0.013541 !$omp parallel @cg.f:185
+2   zero     1.057177     1.063913     0.006736 !$omp parallel @cg.f:185
+3   zero  8345.835045 25213.400111 16867.565066  !$omp barrier @cg.f:805
+4   zero 25227.942463 25235.141154     7.198691  !$omp barrier @cg.f:883
+5   zero 25235.153436 25235.189693     0.036257  !$omp barrier @cg.f:896
+6   zero 28591.264528 28591.299142     0.034614  !$omp barrier @cg.f:984
   PAPI_L2_TCA PAPI_L2_DCM ru_utime ru_stime MISSES_L2
 1         833          88        0        0 0.1056423
 2         446          21        0        0 0.0470852
@@ -983,13 +983,13 @@ head(df5);
 
 #+RESULTS:
 #+begin_example
-         Start          End     Duration Thread                   Region
-1     1.040083     1.053624     0.013541      2 !$omp parallel @cg.f:185
-2     1.057177     1.063913     0.006736      2 !$omp parallel @cg.f:185
-3  8345.835045 25213.400111 16867.565066      4  !$omp barrier @cg.f:805
-4 25227.942463 25235.141154     7.198691      5  !$omp barrier @cg.f:883
-5 25235.153436 25235.189693     0.036257      5  !$omp barrier @cg.f:896
-6 28591.264528 28591.299142     0.034614      5  !$omp barrier @cg.f:984
+  Thread        Start          End     Duration                   Region
+1   zero     1.040083     1.053624     0.013541 !$omp parallel @cg.f:185
+2   zero     1.057177     1.063913     0.006736 !$omp parallel @cg.f:185
+3   zero  8345.835045 25213.400111 16867.565066  !$omp barrier @cg.f:805
+4   zero 25227.942463 25235.141154     7.198691  !$omp barrier @cg.f:883
+5   zero 25235.153436 25235.189693     0.036257  !$omp barrier @cg.f:896
+6   zero 28591.264528 28591.299142     0.034614  !$omp barrier @cg.f:984
   MISSES_L2
 1 0.1056423
 2 0.0470852
